# spaceship-titanic-de-

./: .env.sample  .gitignore  .python-version  LICENSE  Makefile  README.md  app.py  bqanalysis.py  data.py  model.pkl  model.py  model_pipeline_HD.pkl  preprocess.py  pyproject.toml  requirements.in  requirements.txt  spaceship_notebook.ipynb  spaceship_notebook_HD.ipynb  spaceship_notebook_abdelkader.ipynb  spaceship_notebook_lorenzo.ipynb  training.py
notebook/: spaceship_notebook.ipynb
oop_pipeline/: modelconfig.py  training.py
src/oop_pipeline/: bqanalysis.py  getenv.py  modelconfig.py  preprocess.py  training.py
