[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic-mieuxqAloys"
version = "0.1.0"
description = "A package for the Space Titanic project - better than Aloys version, trust us"
authors = [{ name = "Lorenzo del medico" },
{name = "Hugo Decourcelle"}, {name = "abdelkader yahyaoui"}]
requires-python = ">=3.10"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
